All plugin and composer updates to address PHP version bugs, ACF vulnerability, and missing wpackagist repo plugins

--- a/plugins/greatermedia-content-syndication/composer.json
+++ b/plugins/greatermedia-content-syndication/composer.json
@@ -1,5 +1,10 @@
 {
     "name": "beasley/content-syndication",
+    "config": {
+      "platform": {
+        "php": "7.0.33"
+      }
+    },
     "description": "Content Syndication for Beasley",
     "type": "wordpress-plugin",
     "minimum-stability": "dev",
